# dir-content-diff

./: .auto-changelog  .copier-answers.yml  .copyright.tmpl  .coveragerc  .coveragerc_min_versions  .gitignore  .gitlab-ci.yml  .gitreview  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  commitlint.config.js  package.json  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  how_to_use.yaml
.github/workflows/: codeql.yml  publish-sdist.yml  run-tox.yml
dir_content_diff/: __init__.py  base_comparators.py  config.py  core.py  pandas.py  parallel_utils.py  pytest_plugin.py  registry.py  util.py  version.py  voxcell.py
dir_content_diff/cli/: __init__.py
dir_content_diff/comparators/: __init__.py  dependencies.json  morphio.py  pandas.py  voxcell.py
doc/source/: api.rst  conf.py
docs/: Makefile
docs/source/: api_ref.rst  conf.py  index.rst
tests/: __init__.py  conftest.py  generate_test_files.py  test_attrs_validation.py  test_base.py  test_cli.py  test_missing_deps.py  test_pandas.py  test_parallel_execution.py  test_pytest_plugin.py  test_util.py  test_version.py  test_voxcell.py
tests/comparators/: __init__.py  test_morphio.py  test_pandas.py  test_voxcell.py
